2004-08-18  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/specification.rb: One more bug with #test_files.
	Default value of [] wasn't set, resulting in an attempt to call
	#empty? on nil.

	* lib/rubygems/gem_commands.rb: Unit tests appear to be working now.
	Still more testing to do.

	* lib/rubygems/remote_installer.rb, lib/rubygems/installer.rb: Fixed
	minor bugs in default selections for questions asked during 
	installation and uninstallation
 
2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/specification.rb:
	  - #test_suite_file and #test_files now work on older gems.
	  - Added Specification.from_yaml for loading YAML gemspecs
	  - #to_ruby doesn't emit 'specification_version'

	* lib/rubygems/gem_commands.rb: Updated test-on-install code to use
	  Specification#test_files instead of #unit_test_suite.

	* lib/rubygems/old_format.rb: Use Specification.from_yaml
	* lib/rubygems/package.rb:    Ditto

2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/command.rb: --debug option to turn on $DEBUG
	* lib/rubygems/config_file.rb: ditto

2004-08-11  Rich Kilmer <rich@infoether.com>
        * lib/rubygems/installer.rb: The application stub now defaults to 
          the latest version of the library, and optionally allows an initial 
          parameter conforming to _VERSION_ to be passed to select a prior 
          version of the library (this initial parameter, if present, is shifted 
          off of ARGV). This change was re-added...I erased it somehow :(

2004-08-11  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb:
	  - 'gem spec X' displays spec for _latest_ version of X.  Added
	    '--all' option if you want to see all versions.
	  - RDocCommand code cleanup and slight change: document _all_
	    versions of the gem by default, not just the first.

	* lib/rubygems/doc_manager.rb: removed 'kilmer' default template
	  option and obsolete error message.
